--- a/assets/cobblemon/lang/en_us.json
+++ b/assets/cobblemon/lang/en_us.json
@@ -1,4 +1,7 @@
 {
+  "cobblemon.species.arceus.name": "Arceus",
+  "cobblemon.species.arceus.desc1": "It is the heavenly fount from which pours the light that shines across Hisui. Its luminance guides and protects all Pokémon.",
+  "cobblemon.species.arceus.desc2": "Hisuian mythology states that Arceus is the creator of all things.",
   "cobblemon.species.megagallade.name": "Gallade",
   "cobblemon.species.megagardevoir.name": "Gardevoir",
   "cobblemon.species.megagengar.name": "Gengar",
