Add SaltMons pack
Add Rotom spawning, Heatran, Kyurem, and Lando-T.

--- a/assets/cobblemon/lang/en_us.json
+++ b/assets/cobblemon/lang/en_us.json
@@ -106,5 +106,32 @@
   "cobblemon.species.butterfreegmax.name": "ButterfreeGmax",
   "cobblemon.species.butterfreegmax.desc": "It collects honey every day. It rubs honey onto the hairs on its legs to carry it back to its nest.",
   "cobblemon.species.duraludongmax.name": "DuraludonGmax",
-  "cobblemon.species.duraludongmax.desc": "The special metal that composes its body is very light, so this Pokémon has considerable agility. It lives in caves because it dislikes the rain."
+  "cobblemon.species.duraludongmax.desc": "The special metal that composes its body is very light, so this Pokémon has considerable agility. It lives in caves because it dislikes the rain.",
+  "cobblemon.species.landorustherian.name": "Landorus-Therian",
+  "cobblemon.species.landorustherian.desc1": "When the incarnations of wind and of lightning clash, Landorus arrives to quell the conflict. After the tempests and thunderbolts abate, the land is sure to be blessed with bountiful harvests.",
+  "cobblemon.species.landorustherian.desc2": "Landorus soars through the sky in this form, bestowing plentiful harvests upon the land and earning the people’s reverence.",
+  "cobblemon.species.heatran.name": "Heatran",
+  "cobblemon.species.heatran.desc1": "It dwells in volcanic caves. It digs in with its cross-shaped feet to crawl on ceilings and walls.",
+  "cobblemon.species.heatran.desc2": "Stories tell of this Pokémon being birthed from the boiling magma within Mount Coronet. Its molten-steel body holds many mysteries.",
+  "cobblemon.species.rotomwash.name": "Rotom-Wash",
+  "cobblemon.species.rotomwash.desc1": "This Rotom has entered a washing machine. It nods with satisfaction after it floods the surrounding area.",
+  "cobblemon.species.rotomwash.desc2": "The model of washing machine that Rotom can inspirit has been discontinued, so these appliances are now traded at high prices.",
+  "cobblemon.species.rotom.name": "Rotom",
+  "cobblemon.species.rotom.desc1": "Its electricity-like body can enter some kinds of machines and take control in order to make mischief.",
+  "cobblemon.species.rotom.desc2": "Research continues on this Pokémon, which could be the power source of a unique motor.",
+  "cobblemon.species.rotomheat.name": "Rotom-Heat",
+  "cobblemon.species.rotomheat.desc1": "If the convection microwave oven is not working properly, then the Rotom inhabiting it will become lethargic.",
+  "cobblemon.species.rotomheat.desc2": "This Rotom has possessed a convection microwave oven. It will sear the surrounding area with its burning heat, then smile in delight.",
+  "cobblemon.species.rotommow.name": "Rotom-Mow",
+  "cobblemon.species.rotommow.desc1": "The lawn mower is one of the household appliances that led to the development of the Rotom Dex.",
+  "cobblemon.species.rotommow.desc2": "This Rotom has possessed a lawn mower. It will mow down grass and flowers, then swagger around with pride at its accomplishments.",
+  "cobblemon.species.rotomfrost.name": "Rotom-Frost",
+  "cobblemon.species.rotomfrost.desc1": "This Rotom has entered a refrigerator. It leaps around gleefully after it uses cold air to freeze the area around it.",
+  "cobblemon.species.rotomfrost.desc2": "The special motor within the refrigerator is the key to bringing about Rotom's change in form.",
+  "cobblemon.species.rotomfan.name": "Rotom-Fan",
+  "cobblemon.species.rotomfan.desc1": "This Rotom has entered an electric fan. It smirks with satisfaction over a prank well pulled after it blows away everything around it.",
+  "cobblemon.species.rotomfan.desc2": "This Rotom has possessed a lawn mower. It will mow down grass and flowers, then swagger around with pride at its accomplishments.",
+  "cobblemon.species.kyurem.name": "Kyurem",
+  "cobblemon.species.kyurem.desc1": "Dwelling within it is a power even greater than that of Reshiram or Zekrom, but the extreme cold keeps that power bound.",
+  "cobblemon.species.kyurem.desc2": "It appears that this Pokémon uses its powers over ice to freeze its own body in order to stabilize its cellular structure.",
 }
