--- a/assets/cobblemon/lang/en_us.json
+++ b/assets/cobblemon/lang/en_us.json
@@ -133,5 +133,5 @@
   "cobblemon.species.rotomfan.desc2": "This Rotom has possessed a lawn mower. It will mow down grass and flowers, then swagger around with pride at its accomplishments.",
   "cobblemon.species.kyurem.name": "Kyurem",
   "cobblemon.species.kyurem.desc1": "Dwelling within it is a power even greater than that of Reshiram or Zekrom, but the extreme cold keeps that power bound.",
-  "cobblemon.species.kyurem.desc2": "It appears that this Pokémon uses its powers over ice to freeze its own body in order to stabilize its cellular structure.",
+  "cobblemon.species.kyurem.desc2": "It appears that this Pokémon uses its powers over ice to freeze its own body in order to stabilize its cellular structure."
 }
